unpackaged/main/default/objects/Assessments__c/Assessments__c.object-meta.xml
<CustomObject>
    <label>Assessment Checklist</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Checklist No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>