unpackaged/main/default/objects/Assessments__c/fields/Animals_List__c.field-meta.xml
<CustomField>
    <fullName>Animals_List__c</fullName>
    <label>List of Animals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Animals</valueSetName>
    </valueSet>
</CustomField>