unpackaged/main/default/objects/Assessments__c/fields/Application_Assessor__c.field-meta.xml
<CustomField>
    <fullName>Application_Assessor__c</fullName>
    <formula>Application__r.Assessor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Assessor</label>
    <type>Text</type>
</CustomField>