unpackaged/main/default/objects/Assessments__c/fields/Assessment_Completion__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Completion__c</fullName>
    <label>Assessment Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>