unpackaged/main/default/objects/Assessments__c/fields/Farm_Rating__c.field-meta.xml
<CustomField>
    <fullName>Farm_Rating__c</fullName>
    <inlineHelpText>A - Excellent housekeeping with all facilities in perfect order, very tidy appearance internally and externally
B - Good housekeeping with all facilities in good order, tidy appearance internally and externally
C - Acceptable housekeeping with facilities in acceptable order, site acceptably clean, room for improvement
D - Poor housekeeping, disorganised, repair and maintenance limited and infrequent, visually untidy with clutter, requires major improvement</inlineHelpText>
    <label>Farm Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>