unpackaged/main/default/objects/Assessments__c/fields/Farm_shop_selling_Freedom_Food_products__c.field-meta.xml
<CustomField>
    <fullName>Farm_shop_selling_Freedom_Food_products__c</fullName>
    <label>Farm shop selling Freedom Food products?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Yes_No_Values</valueSetName>
    </valueSet>
</CustomField>