unpackaged/main/default/objects/Assessments__c/fields/Farmer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Farmer_Rating__c</fullName>
    <inlineHelpText>A - Member extremely co-operative and positive towards the scheme
B - Member co-operative and appears positive to the scheme
C - Member reasonably co-operative
D - Member offers limited co-operation, confrontational and appears negative to the scheme</inlineHelpText>
    <label>Farmer Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>