unpackaged/main/default/objects/Assessments__c/fields/Interesting_stories__c.field-meta.xml
<CustomField>
    <fullName>Interesting_stories__c</fullName>
    <label>Interesting stories?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Yes_No_Values</valueSetName>
    </valueSet>
</CustomField>