unpackaged/main/default/objects/Assessments__c/fields/Non_Compliances_Created__c.field-meta.xml
<CustomField>
    <fullName>Non_Compliances_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Compliances Created</label>
    <type>Checkbox</type>
</CustomField>