unpackaged/main/default/objects/Assessments__c/fields/Other_areas_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Other_areas_of_interest__c</fullName>
    <label>Other areas of interest?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Yes_No_Values</valueSetName>
    </valueSet>
</CustomField>