unpackaged/main/default/objects/Assessments__c/fields/Other_contact_name_telephone_number__c.field-meta.xml
<CustomField>
    <fullName>Other_contact_name_telephone_number__c</fullName>
    <label>Other contact name/telephone number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Yes_No_Values</valueSetName>
    </valueSet>
</CustomField>