unpackaged/main/default/objects/Assessments__c/fields/Picturesque_site__c.field-meta.xml
<CustomField>
    <fullName>Picturesque_site__c</fullName>
    <label>Picturesque site?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Yes_No_Values</valueSetName>
    </valueSet>
</CustomField>