unpackaged/main/default/objects/Assessments__c/fields/Signed_by_Assessor__c.field-meta.xml
<CustomField>
    <fullName>Signed_by_Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signed by Assessor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assessment_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>