unpackaged/main/default/objects/Assessments__c/fields/Signed_by_Member__c.field-meta.xml
<CustomField>
    <fullName>Signed_by_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signed by Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessment Checklists</relationshipLabel>
    <relationshipName>Assessment_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>