unpackaged/main/default/objects/Assessments__c/fields/Signed_by_Member_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_by_Member_Date__c</fullName>
    <label>Signed by Member Date</label>
    <type>Date</type>
</CustomField>