unpackaged/main/default/objects/Assessments__c/fields/Suitable_willing_for_visits__c.field-meta.xml
<CustomField>
    <fullName>Suitable_willing_for_visits__c</fullName>
    <label>Suitable/willing for visits?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Yes_No_Values</valueSetName>
    </valueSet>
</CustomField>