unpackaged/main/default/objects/Assessments__c/fields/Welfare_Rating__c.field-meta.xml
<CustomField>
    <fullName>Welfare_Rating__c</fullName>
    <inlineHelpText>A - Excellent standards of husbandry evident, goes above and beyond to improve animal welfare
B - Good standards of husbandry evident, livestock well looked after
C - Acceptable standards of husbandry, standards met
D - Poor standards of husbandry, basic needs of livestock met</inlineHelpText>
    <label>Welfare Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>