unpackaged/main/default/objects/Assessments__c/fields/Willing_to_be_interviewed__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_be_interviewed__c</fullName>
    <label>Willing to be interviewed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Yes_No_Values</valueSetName>
    </valueSet>
</CustomField>